# candlewick

./: README.md  pyproject.toml  setup.py
candlewick/: __init__.py  psimpl.pyi  simplification.py
candlewick/psimpl/: __init__.py  bindings.cpp  psimpl.h
